aicode/mslang/tests/errors/type_error_negate.ms
// Test: negate non-number
var x = -"hello" // expect runtime error: Operand must be a number.
